src/objects/OM_Rapport__c.object
<CustomObject>
    <fields>
        <fullName>OM_Affects_Support__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Affects Support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OM_Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Rapports</relationshipLabel>
        <relationshipName>Rapports</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>OM_Details__c</fullName>
        <label>Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OM_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Likes</fullName>
                </value>
                <value>
                    <fullName>Dislikes</fullName>
                </value>
                <value>
                    <fullName>Communication Preferences</fullName>
                </value>
                <value>
                    <fullName>Preferences</fullName>
                </value>
                <value>
                    <fullName>Family</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Rapport</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Rapport Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rapports</pluralLabel>
    <recordTypes>
        <fullName>Rapport_Standard</fullName>
        <active>true</active>
        <label>Rapport Standard</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>